sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: value - is not a member of scala.collection.immutable.Range.Inclusive
    for (i<- 1 to getNombreValeurs()-j-){
                                      ^